--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,6 +237,7 @@
     <string name="dishidu">【低湿】</string>
     <string name="gaoshidu">【高湿度】</string>
     <string name="baojing">【报警】</string>
+    <string name="shilian">【失联】</string>
     <string name="dishuiwei">【低水位】</string>
     <string name="gaoshuiwei">【高水位】</string>
     <string name="xx_huojing">【火警】</string>
